cmake_minimum_required(VERSION 3.14)

project(kvstoreExperiments LANGUAGES CXX)

set(CMAKE_CXX_FLAGS_DEBUG "-g")

add_library(kvstore_experiments OBJECT src/experiments.cpp)
target_include_directories(
        kvstore_experiments ${warning_guard}
        PUBLIC
        "$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/src>"
)
target_link_libraries(kvstore_experiments PRIVATE kvstore_naming)
target_link_libraries(kvstore_experiments PRIVATE kvstore_manifest)
target_link_libraries(kvstore_experiments PRIVATE kvstore_file)
target_link_libraries(kvstore_experiments PRIVATE kvstore_filter)
target_link_libraries(kvstore_experiments PRIVATE kvstore_dbg)
target_link_libraries(kvstore_experiments PRIVATE kvstore_memtable)
target_link_libraries(kvstore_experiments PRIVATE kvstore_buf)
target_link_libraries(kvstore_experiments PRIVATE kvstore_evict)
target_link_libraries(kvstore_experiments PRIVATE kvstore_minheap)
target_link_libraries(kvstore_experiments PRIVATE kvstore_lsm)
target_link_libraries(kvstore_experiments PRIVATE kvstore_sstable)
target_link_libraries(kvstore_experiments PRIVATE kvstore_kvstore)
target_compile_features(kvstore_experiments PUBLIC cxx_std_17)

add_executable(stage_2_experiments src/stage_2_experiments.cpp)
target_link_libraries(stage_2_experiments PRIVATE kvstore_experiments)
target_link_libraries(stage_2_experiments PRIVATE kvstore_naming)
target_link_libraries(stage_2_experiments PRIVATE kvstore_manifest)
target_link_libraries(stage_2_experiments PRIVATE kvstore_file)
target_link_libraries(stage_2_experiments PRIVATE kvstore_filter)
target_link_libraries(stage_2_experiments PRIVATE kvstore_dbg)
target_link_libraries(stage_2_experiments PRIVATE kvstore_memtable)
target_link_libraries(stage_2_experiments PRIVATE kvstore_buf)
target_link_libraries(stage_2_experiments PRIVATE kvstore_evict)
target_link_libraries(stage_2_experiments PRIVATE kvstore_minheap)
target_link_libraries(stage_2_experiments PRIVATE kvstore_lsm)
target_link_libraries(stage_2_experiments PRIVATE kvstore_sstable)
target_link_libraries(stage_2_experiments PRIVATE kvstore_kvstore)
target_compile_features(stage_2_experiments PUBLIC cxx_std_17)

add_executable(stage_3_experiments src/stage_3_experiments.cpp)
target_link_libraries(stage_3_experiments PRIVATE kvstore_experiments)
target_link_libraries(stage_3_experiments PRIVATE kvstore_naming)
target_link_libraries(stage_3_experiments PRIVATE kvstore_manifest)
target_link_libraries(stage_3_experiments PRIVATE kvstore_file)
target_link_libraries(stage_3_experiments PRIVATE kvstore_filter)
target_link_libraries(stage_3_experiments PRIVATE kvstore_dbg)
target_link_libraries(stage_3_experiments PRIVATE kvstore_memtable)
target_link_libraries(stage_3_experiments PRIVATE kvstore_buf)
target_link_libraries(stage_3_experiments PRIVATE kvstore_evict)
target_link_libraries(stage_3_experiments PRIVATE kvstore_minheap)
target_link_libraries(stage_3_experiments PRIVATE kvstore_lsm)
target_link_libraries(stage_3_experiments PRIVATE kvstore_sstable)
target_link_libraries(stage_3_experiments PRIVATE kvstore_kvstore)
target_compile_features(stage_3_experiments PUBLIC cxx_std_17)